--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
       - name: pnpm install
         run: pnpm install
       - name: Publish Packages
+        if: false
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
